--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,12 +2,13 @@
 import '../styles/global.css';
 import { ViewTransitions, slide } from 'astro:transitions';
 import Navbar from '../components/Navbar';
+import { fade } from 'astro/transitions';
 
 const {pageTitle} = Astro.props;
 
 ---
 
-<html lang="en" transition:animate={slide({ duration: '0.5s'})}>
+<html lang="en" transition:animate={fade({ duration: '0.3s'})}>
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
